--- a/less/index.less
+++ b/less/index.less
@@ -1,3 +1,7 @@
+//Import Fonts
+@import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+
 //Imports to CSS
 
 @import "variables";
