--- a/less/global.less
+++ b/less/global.less
@@ -8,7 +8,7 @@ html {
   
   html, body {
     font-family: 'Work Sans', sans-serif;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
   }
   
@@ -39,4 +39,14 @@ html {
   img {
     max-width: 100%;
     height: auto;
+  }
+
+  a {
+    font-size: 1.8rem;
+    text-decoration: none;
+    font-family: 'Work Sans', sans-serif;
+    color: #363636;
+    &:hover{
+        color: #46d2a3;
+    }
   }
