--- a/less/global.less
+++ b/less/global.less
@@ -45,8 +45,10 @@ html {
     font-size: 1.8rem;
     text-decoration: none;
     font-family: 'Work Sans', sans-serif;
-    color: #363636;
+    color: @fontColor;
     &:hover{
-        color: #46d2a3;
+        color: @callToAction;
+        padding: 10px 0;
+        border-bottom: 3px solid @callToAction;
     }
   }
