--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,11 +1,51 @@
 .farmPic{
     width: 100%vw;
-    height: 5%vh;
+    height: 3%vh;
 }
 
 .mission{
     margin-top: 8%;
+    width: 50%;
+    margin: 8% auto;
     h2{
         text-align: center;
+        margin: 5% auto;
+        padding-bottom: 5%;
+        font-size: 3.5rem;
+        border-bottom: 3px solid @callToAction;
+        width: 50%;
+    }
+    p{
+        text-align: center;
+    }
+}
+
+.packages{
+    text-align: center;
+    h2{
+        text-align: center;
+        margin: 5% auto;
+        padding-bottom: 3%;
+        font-size: 3.5rem;
+        border-bottom: 3px solid @callToAction;
+        width: 25%;
+    }
+    h3{
+        font-size: 2.5rem;
+    }
+    p{
+        font-size: 1.8rem;
+    }
+    .twoRow{
+        display: flex;
+        margin: 0 auto;
+        justify-content: space-evenly;
+        width: 80%;
+        .staff{
+            width: 33%;
+        }
+        .client{
+            width: 33%;
+        }
     }
 }
