--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,7 @@ header {
         width: 100%;
         background-color: #fff;
         padding: 25px 0;
+        box-shadow: 10px 0px 4px rgba(0, 0, 0, .5);
         .imgContainer{
             width: 50%;
         }
