--- a/less/home-page.less
+++ b/less/home-page.less
@@ -32,9 +32,11 @@
     }
     h3{
         font-size: 2.5rem;
+        margin: 5% 0;
     }
     p{
         font-size: 1.8rem;
+        margin: 0 2%;
     }
     .twoRow{
         display: flex;
@@ -43,9 +45,34 @@
         width: 80%;
         .staff{
             width: 33%;
+            padding: 5px;
+            border: 2px solid #4e4e4e;
         }
         .client{
             width: 33%;
+            padding: 5px;
+            border: 2px solid #4e4e4e;
+        }
+    }
+    .threeRow{
+        display: flex;
+        margin: 0 auto;
+        justify-content: space-evenly;
+        width: 90%;
+        .sad{
+            width: 30%;
+            padding: 5px;
+            border: 2px solid #4e4e4e;
+        }
+        .credit{
+            width: 30%;
+            padding: 5px;
+            border: 2px solid #4e4e4e;
+        }
+        .cord{
+            width: 30%;
+            padding: 5px;
+            border: 2px solid #4e4e4e;
         }
     }
 }
