--- a/less/home-page.less
+++ b/less/home-page.less
@@ -33,10 +33,12 @@
     h3{
         font-size: 2.5rem;
         margin: 5% 0;
+        color: #fff;
     }
     p{
         font-size: 1.8rem;
         margin: 0 2%;
+        color: #fff;
     }
     .twoRow{
         display: flex;
@@ -46,12 +48,16 @@
         .staff{
             width: 33%;
             padding: 5px;
-            border: 2px solid #4e4e4e;
+            border: 2px solid #1D1D21;
+            background: #4e4e4e;
+            border-radius: 5px;
         }
         .client{
             width: 33%;
             padding: 5px;
-            border: 2px solid #4e4e4e;
+            border: 2px solid #1D1D21;
+            background: #4e4e4e;
+            border-radius: 5px;
         }
     }
     .threeRow{
@@ -62,17 +68,23 @@
         .sad{
             width: 30%;
             padding: 5px;
-            border: 2px solid #4e4e4e;
+            border: 2px solid #1D1D21;
+            background: #4e4e4e;
+            border-radius: 5px;
         }
         .credit{
             width: 30%;
             padding: 5px;
-            border: 2px solid #4e4e4e;
+            border: 2px solid #1D1D21;
+            background: #4e4e4e;
+            border-radius: 5px;
         }
         .cord{
             width: 30%;
             padding: 5px;
-            border: 2px solid #4e4e4e;
+            border: 2px solid #1D1D21;
+            background: #4e4e4e;
+            border-radius: 5px;
         }
     }
 }
