--- a/less/home-page.less
+++ b/less/home-page.less
@@ -94,12 +94,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 8%;
     a{
         text-decoration: none;
         color: #fff;
         background-color: @callToAction;
         padding: 1% 5%;
-        font-size: 1.8rem;
+        font-size: 2.2rem;
         border-radius: 8px;
         &:hover{
             color: @fontColor;
