--- a/css/index.css
+++ b/css/index.css
@@ -198,6 +198,30 @@ header .navBar .navLinks a:hover {
   padding: 10px 0;
   border-bottom: 3px solid #46d2a3;
 }
+.footer {
+  display: flex;
+  text-align: center;
+  font-size: 1.8rem;
+  padding: 1% 0;
+  color: #fff;
+  background-color: #1D1D21;
+  width: 100%;
+}
+.footer nav {
+  display: flex;
+  justify-content: space-evenly;
+  width: 40%;
+}
+.footer nav a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.8rem;
+}
+.footer div {
+  display: flex;
+  width: 55%;
+  justify-content: flex-end;
+}
 .farmPic {
   width: 100%vw;
   height: 3%vh;
@@ -291,13 +315,14 @@ header .navBar .navLinks a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 8%;
 }
 .button a {
   text-decoration: none;
   color: #fff;
   background-color: #46d2a3;
   padding: 1% 5%;
-  font-size: 1.8rem;
+  font-size: 2.2rem;
   border-radius: 8px;
 }
 .button a:hover {
