--- a/css/index.css
+++ b/css/index.css
@@ -178,8 +178,33 @@ header .navBar {
   padding: 25px 0;
   box-shadow: 10px 0px 4px rgba(0, 0, 0, 0.5);
 }
+@media (max-width: 1000px) {
+  header .navBar {
+    flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  header .navBar {
+    position: relative;
+    padding: 0 0;
+  }
+}
 header .navBar .imgContainer {
   width: 50%;
+}
+@media (max-width: 1000px) {
+  header .navBar .imgContainer {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
+  }
+}
+@media (max-width: 500px) {
+  header .navBar .imgContainer {
+    margin-top: 2%;
+  }
 }
 header .navBar .navLinks {
   display: flex;
@@ -187,11 +212,31 @@ header .navBar .navLinks {
   width: 50%;
   justify-content: space-around;
 }
+@media (max-width: 1000px) {
+  header .navBar .navLinks {
+    width: 100%;
+    justify-content: space-evenly;
+  }
+}
+@media (max-width: 500px) {
+  header .navBar .navLinks {
+    flex-direction: column;
+  }
+}
 header .navBar .navLinks a {
   font-size: 1.8rem;
   text-decoration: none;
   font-family: 'Work Sans', sans-serif;
   color: #363636;
+}
+@media (max-width: 500px) {
+  header .navBar .navLinks a {
+    margin-top: 5%;
+    border-bottom: 1px solid #363636;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 5%;
+  }
 }
 header .navBar .navLinks a:hover {
   color: #46d2a3;
@@ -207,29 +252,64 @@ header .navBar .navLinks a:hover {
   background-color: #1D1D21;
   width: 100%;
 }
+@media (max-width: 500px) {
+  .footer {
+    flex-direction: column;
+  }
+}
 .footer nav {
   display: flex;
   justify-content: space-evenly;
   width: 40%;
+}
+@media (max-width: 500px) {
+  .footer nav {
+    flex-direction: column;
+    width: 100%;
+  }
 }
 .footer nav a {
   text-decoration: none;
   color: #fff;
   font-size: 1.8rem;
 }
+@media (max-width: 500px) {
+  .footer nav a {
+    padding: 5% 0;
+    border-bottom: 1px solid #fff;
+  }
+}
 .footer div {
   display: flex;
   width: 55%;
   justify-content: flex-end;
 }
+@media (max-width: 500px) {
+  .footer div {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin: 5% 0;
+  }
+}
 .farmPic {
   width: 100%vw;
   height: 3%vh;
+}
+@media (max-width: 500px) {
+  .farmPic {
+    display: none;
+  }
 }
 .mission {
   margin-top: 8%;
   width: 50%;
   margin: 8% auto;
+}
+@media (max-width: 500px) {
+  .mission {
+    width: 90%;
+  }
 }
 .mission h2 {
   text-align: center;
@@ -238,6 +318,11 @@ header .navBar .navLinks a:hover {
   font-size: 3.5rem;
   border-bottom: 3px solid #46d2a3;
   width: 50%;
+}
+@media (max-width: 500px) {
+  .mission h2 {
+    width: 60%;
+  }
 }
 .mission p {
   text-align: center;
@@ -253,6 +338,11 @@ header .navBar .navLinks a:hover {
   font-size: 3.5rem;
   border-bottom: 3px solid #46d2a3;
   width: 25%;
+}
+@media (max-width: 500px) {
+  .packages h2 {
+    width: 60%;
+  }
 }
 .packages h3 {
   font-size: 2.5rem;
@@ -270,12 +360,26 @@ header .navBar .navLinks a:hover {
   justify-content: space-evenly;
   width: 80%;
 }
+@media (max-width: 500px) {
+  .packages .twoRow {
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+}
 .packages .twoRow .staff {
   width: 33%;
   padding: 5px;
   border: 2px solid #1D1D21;
   background: #4e4e4e;
   border-radius: 5px;
+}
+@media (max-width: 500px) {
+  .packages .twoRow .staff {
+    width: 90%;
+    margin-bottom: 5%;
+  }
 }
 .packages .twoRow .client {
   width: 33%;
@@ -284,11 +388,25 @@ header .navBar .navLinks a:hover {
   background: #4e4e4e;
   border-radius: 5px;
 }
+@media (max-width: 500px) {
+  .packages .twoRow .client {
+    width: 90%;
+    margin-bottom: 5%;
+  }
+}
 .packages .threeRow {
   display: flex;
   margin: 0 auto;
   justify-content: space-evenly;
   width: 90%;
+}
+@media (max-width: 500px) {
+  .packages .threeRow {
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .packages .threeRow .sad {
   width: 30%;
@@ -297,6 +415,12 @@ header .navBar .navLinks a:hover {
   background: #4e4e4e;
   border-radius: 5px;
 }
+@media (max-width: 500px) {
+  .packages .threeRow .sad {
+    width: 90%;
+    margin-bottom: 5%;
+  }
+}
 .packages .threeRow .credit {
   width: 30%;
   padding: 5px;
@@ -304,12 +428,24 @@ header .navBar .navLinks a:hover {
   background: #4e4e4e;
   border-radius: 5px;
 }
+@media (max-width: 500px) {
+  .packages .threeRow .credit {
+    width: 90%;
+    margin-bottom: 5%;
+  }
+}
 .packages .threeRow .cord {
   width: 30%;
   padding: 5px;
   border: 2px solid #1D1D21;
   background: #4e4e4e;
   border-radius: 5px;
+}
+@media (max-width: 500px) {
+  .packages .threeRow .cord {
+    width: 90%;
+    margin-bottom: 5%;
+  }
 }
 .button {
   display: flex;
@@ -324,6 +460,11 @@ header .navBar .navLinks a:hover {
   padding: 1% 5%;
   font-size: 2.2rem;
   border-radius: 8px;
+}
+@media (max-width: 500px) {
+  .button a {
+    padding: 5% 30%;
+  }
 }
 .button a:hover {
   color: #363636;
